Fixed: Don't auto zoom when focusing inputs on mobile devices, namely iOS

--- a/frontend/src/Styles/scaffolding.css
+++ b/frontend/src/Styles/scaffolding.css
@@ -43,3 +43,12 @@ ul {
   margin: 0;
   padding-left: 20px;
 }
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 812px) {
+  input,
+  optgroup,
+  select,
+  textarea {
+    font-size: 16px;
+  }
+}
